--- a/app/src/main/res/layout/activity_customer_order_page.xml
+++ b/app/src/main/res/layout/activity_customer_order_page.xml
@@ -1,115 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/images7"
-    tools:context=".MainActivity">
+    tools:context=".CustomerOrderPage">
 
-    <TextView
-        android:id="@+id/orderforsellertxt"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="অর্ডারের বিস্তারিত তথ্য"
-        android:textColor="#E8FFFFFF"
-        android:textSize="35dp"
-        android:textStyle="bold"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="400dp"
+        android:layout_height="600dp"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentTop="true"
         android:layout_marginTop="30dp"
-        android:gravity="center"
-        />
+        android:alpha=".5"
+        android:scaleType="centerCrop"
+        android:src="@drawable/undraw_order_delivered_re_v4ab"/>
 
     <TextView
         android:id="@+id/txtforwhattoorder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/orderforsellertxt"
+        android:layout_margin="15dp"
         android:paddingLeft="24dp"
         android:text="Which product do you want to order :"
-        android:textColor="#E8FFFFFF"
+        android:textColor="#B3000000"
         android:textSize="20dp"
-        android:textStyle="italic"
-        android:layout_margin="5dp"
-        />
+        android:textStyle="italic" />
 
-    <EditText
-        android:id="@+id/whatordertxt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/txtforwhattoorder"
-        android:layout_marginTop="5dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="10dp"
-        android:background="#30ffffff"
-        android:drawablePadding="20dp"
-        android:padding="20dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white" />
-    <TextView
-        android:id="@+id/txtforqty"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/whatordertxt"
-        android:paddingLeft="24dp"
-        android:text="Quantity :"
-        android:textColor="#E8FFFFFF"
-        android:textSize="20dp"
-        android:textStyle="italic"
-        android:layout_margin="5dp"
-        />
+        <EditText
+            android:id="@+id/whatordertxt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/txtforwhattoorder"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginBottom="10dp"
+            android:background="#14000000"
+            android:drawablePadding="20dp"
+            android:padding="20dp"
+            android:textColor="#80000000"
+            android:textColorHint="#80000000" />
 
-    <EditText
-        android:id="@+id/qtytxt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/txtforqty"
-        android:layout_marginTop="5dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="10dp"
-        android:background="#30ffffff"
-        android:drawablePadding="20dp"
-        android:padding="20dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white" />
-    <TextView
-        android:id="@+id/txtforpayment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/qtytxt"
-        android:paddingLeft="24dp"
-        android:text="Payment :"
-        android:textColor="#E8FFFFFF"
-        android:textSize="20dp"
-        android:textStyle="italic"
-        android:layout_margin="5dp"
-        />
+        <TextView
+            android:id="@+id/txtforqty"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/whatordertxt"
+            android:layout_margin="15dp"
+            android:paddingLeft="24dp"
+            android:text="Quantity :"
+            android:textColor="#B3000000"
+            android:textSize="20dp"
+            android:textStyle="italic" />
+
+        <EditText
+            android:id="@+id/qtytxt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/txtforqty"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginBottom="10dp"
+            android:background="#14000000"
+            android:drawablePadding="20dp"
+            android:padding="20dp"
+            android:textColor="#B3000000"
+            android:textColorHint="#B3000000" />
+
+        <TextView
+            android:id="@+id/txtforpayment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/qtytxt"
+            android:layout_margin="15dp"
+            android:paddingLeft="24dp"
+            android:text="Payment :"
+            android:textColor="#B3000000"
+            android:textSize="20dp"
+            android:textStyle="italic" />
+
     <EditText
         android:id="@+id/payment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/txtforpayment"
-        android:layout_marginTop="5dp"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="10dp"
-        android:background="#30ffffff"
+        android:background="#14000000"
         android:drawablePadding="20dp"
         android:padding="20dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white" />
-    <com.google.android.material.button.MaterialButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/regbtn"
-        android:text="CONFIRM"
-        android:textSize="25dp"
-        android:layout_below="@id/payment"
-        android:layout_centerHorizontal="true"
-        android:backgroundTint="@color/teal_200"
-        android:layout_margin="20dp"
-        />
+        android:textColor="#B3000000"
+        android:textColorHint="#B3000000" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/regbtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/payment"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginBottom="30dp"
+            android:background="@drawable/btn_background"
+            android:text="অর্ডার নিশ্চিত করুন" />
 
 
 
@@ -118,5 +123,6 @@
 
 
 
+    </RelativeLayout>
 
-</RelativeLayout>
+</ScrollView>
