--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -4,75 +4,83 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/images10"
     tools:context=".LoginPage">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/signin"
-        android:text="লগইন করুন"
-        android:textColor="@color/white"
-        android:textSize="35dp"
-        android:textStyle="bold"
-        android:layout_margin="50dp"
-        android:gravity="center"/>
+<!--    <TextView-->
+<!--        android:id="@+id/signin"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="50dp"-->
+<!--        android:layout_marginTop="50dp"-->
+<!--        android:layout_marginEnd="50dp"-->
+<!--        android:layout_marginBottom="50dp"-->
+<!--        android:gravity="center"-->
+<!--        android:text="লগইন করুন"-->
+<!--        android:textColor="#80000000"-->
+<!--        android:textSize="35dp"-->
+<!--        android:textStyle="bold" />-->
+
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_centerHorizontal="true"
+        android:scaleType="centerCrop"
+        android:src="@drawable/undraw_account_re_o7id"/>
 
     <EditText
         android:id="@+id/email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/signin"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="24dp"
-        android:background="#30ffffff"
+        android:layout_below="@+id/image"
+        android:layout_margin="16dp"
+        android:background="#14000000"
+        android:backgroundTint="#80000000"
         android:drawableLeft="@drawable/ic_baseline_email_24"
         android:drawablePadding="5dp"
         android:hint="ই-মেইল অ্যাকাউন্ট"
         android:inputType="text"
         android:padding="20dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white" />
+        android:textColor="#80000000"
+        android:textColorHint="#80000000" />
 
     <EditText
         android:id="@+id/password"
-        android:inputType="textPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/email"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="24dp"
-        android:background="#30ffffff"
+        android:layout_margin="16dp"
+        android:background="#14000000"
+        android:backgroundTint="#80000000"
         android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
         android:drawablePadding="15dp"
         android:hint="গোপন পিন নাম্বার দিন"
+        android:inputType="textPassword"
         android:padding="20dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white" />
+        android:textColor="#80000000"
+        android:textColorHint="#80000000" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/loginbtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/forgotpass"
-        android:layout_marginBottom="80dp"
-        android:layout_centerHorizontal="true"
-        android:backgroundTint="@color/purple_700"
-        android:text="লগইন" />
 
     <TextView
         android:id="@+id/forgotpass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/password"
+        android:layout_margin="10dp"
+        android:layout_alignParentRight="true"
+        android:text="গোপন পিন নাম্বারটি ভুলে গেছেন?"
+        android:textColor="#B3000000"/>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/loginbtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_above="@+id/lastdialog"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"
-        android:text="গোপন পিন নাম্বারটি ভুলে গেছেন?"
-        android:textColor="@color/white"/>
+        android:layout_margin="30dp"
+        android:background="@drawable/btn_background"
+        android:text="লগইন" />
+
 
     <LinearLayout
         android:id="@+id/lastdialog"
@@ -87,7 +95,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="নতুন অ্যাকাউন্ট খুলতে চান?"
-            android:textColor="@color/white"/>
+            android:textColor="#B3000000"/>
         <TextView
             android:id="@+id/regnow"
             android:layout_width="wrap_content"
@@ -95,7 +103,7 @@
             android:layout_marginStart="5dp"
             android:text="অ্যাকাউন্ট খুলুন"
             android:textStyle="bold"
-            android:textColor="@color/white"/>
+            android:textColor="#B3000000"/>
     </LinearLayout>
 
 </RelativeLayout>
