--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,11 +14,13 @@
         android:layout_marginTop="10dp"
         android:scaleType="centerCrop"
         android:layout_centerHorizontal="true"
+        android:layout_alignParentRight="true"
         android:src="@drawable/undraw_profile_pic_re_78k0" />
     <TextView
         android:id="@+id/yourprofile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
         android:layout_below="@id/image"
         android:layout_marginTop="-10dp"
         android:text="আপনার প্রোফাইল"
