--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -4,134 +4,156 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/images2"
     tools:context=".OrderDetails">
 
 
-    <TextView
-        android:id="@+id/orderstxt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="অর্ডারের বিস্তারিত তথ্য"
-        android:textColor="#E8FFFFFF"
-        android:textSize="35dp"
-        android:textStyle="bold"
-        android:layout_margin="40dp"
-        android:gravity="center"
-        />
+<!--    <TextView-->
+<!--        android:id="@+id/orderstxt"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="40dp"-->
+<!--        android:layout_marginTop="40dp"-->
+<!--        android:layout_marginEnd="40dp"-->
+<!--        android:layout_marginBottom="40dp"-->
+<!--        android:gravity="center"-->
+<!--        android:text="অর্ডারের বিস্তারিত তথ্য"-->
+<!--        android:textColor="#B3000000"-->
+<!--        android:textSize="35dp"-->
+<!--        android:textStyle="bold" />-->
+
     <TextView
         android:id="@+id/orderwho"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/orderstxt"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
         android:paddingLeft="24dp"
         android:text="কে অর্ডার করেছেন:"
-        android:textColor="#E8FFFFFF"
+        android:textColor="#B3000000"
         android:textSize="20dp"
-        android:textStyle="italic"
-        android:layout_margin="5dp"
-        />
+        android:textStyle="italic" />
 
     <TextView
         android:id="@+id/orderusername"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/orderwho"
-        android:layout_marginTop="5dp"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="10dp"
         android:background="#30ffffff"
         android:drawablePadding="20dp"
         android:hint="নাম"
         android:padding="20dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white" />
+        android:textColor="#80000000"
+        android:textColorHint="#80000000" />
+
     <TextView
         android:id="@+id/orderwhere"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/orderusername"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
         android:paddingLeft="24dp"
         android:text="কোথায় অর্ডার পৌঁছে দিতে হবে :"
-        android:textColor="#E8FFFFFF"
+        android:textColor="#B3000000"
         android:textSize="20dp"
-        android:textStyle="italic"
-        android:layout_margin="5dp"
-        />
+        android:textStyle="italic" />
 
     <TextView
         android:id="@+id/orderlocation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/orderwhere"
-        android:layout_marginTop="5dp"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="10dp"
         android:background="#30ffffff"
         android:drawablePadding="20dp"
         android:hint="ঠিকানা"
         android:padding="20dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white" />
+        android:textColor="#80000000"
+        android:textColorHint="#80000000" />
+
     <TextView
         android:id="@+id/orderwhatqty"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="24dp"
         android:layout_below="@id/orderlocation"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
+        android:paddingLeft="24dp"
         android:text="পরিমাণ :"
-        android:textColor="#E8FFFFFF"
+        android:textColor="#B3000000"
         android:textSize="20dp"
-        android:textStyle="italic"
-        android:layout_margin="5dp"
-        />
+        android:textStyle="italic" />
 
     <TextView
         android:id="@+id/orderquantity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/orderwhatqty"
-        android:layout_marginTop="5dp"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="10dp"
         android:background="#30ffffff"
         android:drawablePadding="20dp"
         android:hint="পরিমাণ"
         android:padding="20dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white" />
+        android:textColor="#80000000"
+        android:textColorHint="#80000000" />
 
     <TextView
         android:id="@+id/orderrecommendation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/orderquantity"
-        android:text="বিশেষ কোন তথ্য/ সুপারিশ:"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
         android:paddingLeft="24dp"
-        android:textColor="#E8FFFFFF"
+        android:text="বিশেষ কোন তথ্য/ সুপারিশ:"
+        android:textColor="#B3000000"
         android:textSize="20dp"
-        android:textStyle="italic"
-        android:layout_margin="5dp"
-        />
+        android:textStyle="italic" />
 
     <TextView
         android:id="@+id/orderspecialrec"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/orderrecommendation"
-        android:layout_marginTop="5dp"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="10dp"
         android:background="#30ffffff"
         android:drawablePadding="20dp"
         android:hint="নেই"
         android:padding="20dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white" />
+        android:textColor="#80000000"
+        android:textColorHint="#80000000" />
+
+
+    <pl.droidsonroids.gif.GifImageView
+        android:id="@+id/image"
+        android:layout_width="300dp"
+        android:layout_height="200dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:alpha=".5"
+        android:scaleType="centerCrop"
+        android:src="@drawable/delivery" />
 
 
 </RelativeLayout>
