--- a/app/src/main/res/layout/activity_otp_send.xml
+++ b/app/src/main/res/layout/activity_otp_send.xml
@@ -15,6 +15,7 @@
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_marginTop="70dp"
+            android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
