--- a/app/src/main/res/layout/activity_register_scan.xml
+++ b/app/src/main/res/layout/activity_register_scan.xml
@@ -26,11 +26,14 @@
         android:id="@+id/text_display"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text=""
         android:layout_below="@id/image_view"
-        android:textSize="24dp"
-        android:maxLines="5"
-        android:layout_margin="10dp"/>
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:maxLines="10"
+        android:text=""
+        android:textSize="10dp" />
 
     <Button
         android:id="@+id/capture_image"
